--- a/HW3/task_6-7/index.html
+++ b/HW3/task_6-7/index.html
@@ -16,7 +16,7 @@
                   </tr>
                   <tr>
                     <td>name: </td>
-                    <td>   -- TOM</td>
+                    <td>   -- Tom</td>
                   </tr>
                   <tr>
                     <td>life: </td>
@@ -28,19 +28,19 @@
                   </tr>
                   <tr>
                     <td>sleep: </td>
-                    <td>   -- &#x1F603</td>
+                    <td>   -- &#x1F615</td>
                   </tr>
                   <tr>
                     <td>hunger: </td>
-                    <td>   -- &#x1F603</td>
+                    <td>   -- &#x1F615</td>
                   </tr>
                   <tr>
                     <td>toilet: </td>
-                    <td>   -- &#x1F603</td>
+                    <td>   -- &#x1F642</td>
                   </tr>
                   <tr>
                     <td>smart: </td>
-                    <td>   -- &#x1F62B</td>
+                    <td>   -- &#x1F615</td>
                   </tr>
                 </table>
               
