hw3_task6-7_issues_fix

--- a/HW3/task_6-7/index.html
+++ b/HW3/task_6-7/index.html
@@ -16,7 +16,7 @@
                   </tr>
                   <tr>
                     <td>name: </td>
-                    <td>   -- Tom</td>
+                    <td>   -- Rwe</td>
                   </tr>
                   <tr>
                     <td>life: </td>
